Switch to openjdk 11 LTS / IDE Settings